# nbv_3d_cnn_octree

./: README.md
nbv_3d_cnn/: CMakeLists.txt  package.xml
nbv_3d_cnn/cmake/: octree_raycast_cl.cmake
nbv_3d_cnn/include/nbv_3d_cnn/: generate_single_image.h  generate_test_dataset_opencl.h  opencl_program.h  simulate_nbv_cycle_adapter.h  simulate_nbv_cycle_octree_adapter.h  voxelgrid.h
nbv_3d_cnn/launch/: generate_3d_scenes_realistic.launch  generate_test_dataset_3d_realistic.launch
nbv_3d_cnn/scripts/: nbv_3d_cnn_generate.py  nbv_3d_model.py  scene_3d_dataset.py
nbv_3d_cnn/src/: generate_3d_scenes_realistic.cpp  generate_3d_scenes_realistic.h  generate_single_image.cpp  generate_test_dataset.cl  generate_test_dataset.cpp  generate_test_dataset.h  generate_test_dataset_opencl.cpp  octree_raycast.cl  octree_raycast_opencl.cpp  octree_raycast_opencl.h  opencl_program.cpp  simulate_nbv_cycle.cpp  simulate_nbv_cycle.h  simulate_nbv_cycle_adapter.cpp  simulate_nbv_cycle_octree.h  simulate_nbv_cycle_octree_adapter.cpp  simulate_nbv_cycle_octree_adapter.hpp  simulate_nbv_cycle_octree_prediction.h  voxelgrid.cpp  voxelgrid_visualization.cpp  voxelgrid_visualization.h
nbv_3d_cnn_msgs/: CMakeLists.txt
nbv_3d_cnn_msgs/action/: Predict.action  Predict3d.action
nbv_3d_cnn_octree/: CMakeLists.txt  package.xml
nbv_3d_cnn_octree/launch/: generate_octrees_2d.launch  generate_octrees_3d.launch  octree_2d_visualization.launch  octree_3d_visualization.launch  octree_predict.launch  octree_sparse.launch  octree_sparse_3d.launch  octree_sparse_memtest.launch  octree_train.launch  octrees_2d_to_image.launch  octrees_2d_to_image_gt.launch  simulate_nbv_cycle.launch  simulate_nbv_cycle_3d_realistic.launch  voxelgrid_visualization.launch
nbv_3d_cnn_octree/launch/dataset/: generate_3d_scenes_realistic.launch  generate_3d_scenes_realistic2x.launch  generate_3d_scenes_realistic_large.launch  generate_test_dataset.launch  generate_test_dataset_3d_realistic.launch  generate_test_dataset_3d_realistic2x.launch  generate_test_dataset_3d_realistic_large.launch
nbv_3d_cnn_octree/scripts/: dataset.py  enum_config.py  model_factory.py  octree_predict.py  octree_pytorch_enc_dec.py  octree_pytorch_resnet.py  octree_save_load.py  octree_sparse.py  octree_sparse_minkowski_enc_dec.py  octree_sparse_pytorch.py  octree_sparse_pytorch_common.py  octree_sparse_pytorch_enc_dec.py  octree_sparse_pytorch_memtest.py  octree_sparse_pytorch_memtest_kernel.py  octree_sparse_pytorch_utils.py  octree_train.py
nbv_3d_cnn_octree/scripts_bash/: crop_inria_environments.sh  run_nbv_cycles.sh  run_nbv_cycles_3d_realistic.sh  run_nbv_cycles_3d_realistic_large.sh
nbv_3d_cnn_octree/src/: image_to_octree.cpp  octree_to_image.cpp  octree_to_image.h  octree_to_points.cpp  octree_to_visualization_msgs.cpp  voxelgrid_predict.cpp  voxelgrid_predict.h
nbv_3d_cnn_octree_common/: CMakeLists.txt  package.xml
nbv_3d_cnn_octree_common/include/nbv_3d_cnn_octree_common/: image_to_octree.h  octree_load_save.h
nbv_3d_cnn_octree_common/src/: octree_load_save.cpp
nbv_3d_cnn_octree_msgs/: CMakeLists.txt  package.xml
nbv_3d_cnn_octree_msgs/action/: PredictImage.action  PredictOctree.action
nbv_3d_cnn_octree_msgs/msg/: Octree.msg  OctreeLevel.msg
